--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,12 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
+    <script src="https://unpkg.com/classnames@2.3.1/index.js"></script>
+    <script>
+      let classnames = classNames;
+    </script>
+    <script src="/index.js"></script>
   </body>
 </html>
